a
In file included from VectorOrMmap.hh:8:0,
                 from SubsetSuffixArray.hh:26,
                 from lastal.hh:11,
                 from lastal.cc:4:
Mmap.hh: In copy constructor ‘cbrc::VectorOrMmap<unsigned int>::VectorOrMmap(const cbrc::VectorOrMmap<unsigned int>&)’:
Mmap.hh:62:3: error: ‘cbrc::Mmap<T>::Mmap(const cbrc::Mmap<T>&) [with T = unsigned int]’ is private
   Mmap( const Mmap& );
   ^
In file included from SubsetSuffixArray.hh:26:0,
                 from lastal.hh:11,
                 from lastal.cc:4:
VectorOrMmap.hh:15:8: error: within this context
 struct VectorOrMmap{
        ^
In file included from lastal.hh:11:0,
                 from lastal.cc:4:
SubsetSuffixArray.hh: In copy constructor ‘cbrc::SubsetSuffixArray::SubsetSuffixArray(const cbrc::SubsetSuffixArray&)’:
SubsetSuffixArray.hh:30:7: note: synthesized method ‘cbrc::VectorOrMmap<unsigned int>::VectorOrMmap(const cbrc::VectorOrMmap<unsigned int>&)’ first required here 
 class SubsetSuffixArray{
       ^
In file included from lastal.cc:4:0:
lastal.hh: In copy constructor ‘threadData::threadData(const threadData&)’:
lastal.hh:46:8: note: synthesized method ‘cbrc::SubsetSuffixArray::SubsetSuffixArray(const cbrc::SubsetSuffixArray&)’ first required here 
 struct threadData{
        ^
In file included from VectorOrMmap.hh:8:0,
                 from SubsetSuffixArray.hh:26,
                 from lastal.hh:11,
                 from lastal.cc:4:
Mmap.hh: In copy constructor ‘cbrc::VectorOrMmap<unsigned char>::VectorOrMmap(const cbrc::VectorOrMmap<unsigned char>&)’:
Mmap.hh:62:3: error: ‘cbrc::Mmap<T>::Mmap(const cbrc::Mmap<T>&) [with T = unsigned char]’ is private
   Mmap( const Mmap& );
   ^
In file included from SubsetSuffixArray.hh:26:0,
                 from lastal.hh:11,
                 from lastal.cc:4:
VectorOrMmap.hh:15:8: error: within this context
 struct VectorOrMmap{
        ^
In file included from lastal.hh:20:0,
                 from lastal.cc:4:
MultiSequence.hh: In copy constructor ‘cbrc::MultiSequence::MultiSequence(const cbrc::MultiSequence&)’:
MultiSequence.hh:20:7: note: synthesized method ‘cbrc::VectorOrMmap<unsigned char>::VectorOrMmap(const cbrc::VectorOrMmap<unsigned char>&)’ first required here 
 class MultiSequence{
       ^
In file included from VectorOrMmap.hh:8:0,
                 from SubsetSuffixArray.hh:26,
                 from lastal.hh:11,
                 from lastal.cc:4:
Mmap.hh: In copy constructor ‘cbrc::VectorOrMmap<char>::VectorOrMmap(const cbrc::VectorOrMmap<char>&)’:
Mmap.hh:62:3: error: ‘cbrc::Mmap<T>::Mmap(const cbrc::Mmap<T>&) [with T = char]’ is private
   Mmap( const Mmap& );
   ^
In file included from SubsetSuffixArray.hh:26:0,
                 from lastal.hh:11,
                 from lastal.cc:4:
VectorOrMmap.hh:15:8: error: within this context
 struct VectorOrMmap{
        ^
In file included from lastal.hh:20:0,
                 from lastal.cc:4:
MultiSequence.hh: In copy constructor ‘cbrc::MultiSequence::MultiSequence(const cbrc::MultiSequence&)’:
MultiSequence.hh:20:7: note: synthesized method ‘cbrc::VectorOrMmap<char>::VectorOrMmap(const cbrc::VectorOrMmap<char>&)’ first required here 
 class MultiSequence{
       ^
In file included from lastal.cc:4:0:
lastal.hh: In copy constructor ‘threadData::threadData(const threadData&)’:
lastal.hh:46:8: note: synthesized method ‘cbrc::MultiSequence::MultiSequence(const cbrc::MultiSequence&)’ first required here 
 struct threadData{
        ^
lastal.cc: In function ‘void prepareThreadData()’:
lastal.cc:44:36: note: synthesized method ‘threadData::threadData(const threadData&)’ first required here 
     threadData data = threadDatas[i];
                                    ^
In file included from lastal.hh:12:0,
                 from lastal.cc:4:
Centroid.hh: In member function ‘cbrc::Centroid& cbrc::Centroid::operator=(const cbrc::Centroid&)’:
Centroid.hh:33:9: error: non-static reference member ‘const cbrc::GappedXdropAligner& cbrc::Centroid::xa’, can’t use default assignment operator
   class Centroid{
         ^
lastal.cc: In function ‘void prepareThreadData()’:
lastal.cc:54:19: note: synthesized method ‘cbrc::Centroid& cbrc::Centroid::operator=(const cbrc::Centroid&)’ first required here 
     data.centroid = centroid;
                   ^
In file included from VectorOrMmap.hh:8:0,
                 from SubsetSuffixArray.hh:26,
                 from lastal.hh:11,
                 from lastal.cc:4:
Mmap.hh: In member function ‘cbrc::VectorOrMmap<unsigned char>& cbrc::VectorOrMmap<unsigned char>::operator=(const cbrc::VectorOrMmap<unsigned char>&)’:
Mmap.hh:63:9: error: ‘cbrc::Mmap<T>& cbrc::Mmap<T>::operator=(const cbrc::Mmap<T>&) [with T = unsigned char]’ is private
   Mmap& operator=( const Mmap& );
         ^
In file included from SubsetSuffixArray.hh:26:0,
                 from lastal.hh:11,
                 from lastal.cc:4:
VectorOrMmap.hh:15:8: error: within this context
 struct VectorOrMmap{
        ^
In file included from lastal.hh:20:0,
                 from lastal.cc:4:
MultiSequence.hh: In member function ‘cbrc::MultiSequence& cbrc::MultiSequence::operator=(const cbrc::MultiSequence&)’:
MultiSequence.hh:20:7: note: synthesized method ‘cbrc::VectorOrMmap<unsigned char>& cbrc::VectorOrMmap<unsigned char>::operator=(const cbrc::VectorOrMmap<unsigned char>&)’ first required here 
 class MultiSequence{
       ^
In file included from VectorOrMmap.hh:8:0,
                 from SubsetSuffixArray.hh:26,
                 from lastal.hh:11,
                 from lastal.cc:4:
Mmap.hh: In member function ‘cbrc::VectorOrMmap<unsigned int>& cbrc::VectorOrMmap<unsigned int>::operator=(const cbrc::VectorOrMmap<unsigned int>&)’:
Mmap.hh:63:9: error: ‘cbrc::Mmap<T>& cbrc::Mmap<T>::operator=(const cbrc::Mmap<T>&) [with T = unsigned int]’ is private
   Mmap& operator=( const Mmap& );
         ^
In file included from SubsetSuffixArray.hh:26:0,
                 from lastal.hh:11,
                 from lastal.cc:4:
VectorOrMmap.hh:15:8: error: within this context
 struct VectorOrMmap{
        ^
In file included from lastal.hh:20:0,
                 from lastal.cc:4:
MultiSequence.hh: In member function ‘cbrc::MultiSequence& cbrc::MultiSequence::operator=(const cbrc::MultiSequence&)’:
MultiSequence.hh:20:7: note: synthesized method ‘cbrc::VectorOrMmap<unsigned int>& cbrc::VectorOrMmap<unsigned int>::operator=(const cbrc::VectorOrMmap<unsigned int>&)’ first required here 
 class MultiSequence{
       ^
In file included from VectorOrMmap.hh:8:0,
                 from SubsetSuffixArray.hh:26,
                 from lastal.hh:11,
                 from lastal.cc:4:
Mmap.hh: In member function ‘cbrc::VectorOrMmap<char>& cbrc::VectorOrMmap<char>::operator=(const cbrc::VectorOrMmap<char>&)’:
Mmap.hh:63:9: error: ‘cbrc::Mmap<T>& cbrc::Mmap<T>::operator=(const cbrc::Mmap<T>&) [with T = char]’ is private
   Mmap& operator=( const Mmap& );
         ^
In file included from SubsetSuffixArray.hh:26:0,
                 from lastal.hh:11,
                 from lastal.cc:4:
VectorOrMmap.hh:15:8: error: within this context
 struct VectorOrMmap{
        ^
In file included from lastal.hh:20:0,
                 from lastal.cc:4:
MultiSequence.hh: In member function ‘cbrc::MultiSequence& cbrc::MultiSequence::operator=(const cbrc::MultiSequence&)’:
MultiSequence.hh:20:7: note: synthesized method ‘cbrc::VectorOrMmap<char>& cbrc::VectorOrMmap<char>::operator=(const cbrc::VectorOrMmap<char>&)’ first required here 
 class MultiSequence{
       ^
lastal.cc: In function ‘void prepareThreadData()’:
lastal.cc:56:16: note: synthesized method ‘cbrc::MultiSequence& cbrc::MultiSequence::operator=(const cbrc::MultiSequence&)’ first required here 
     data.query = query;  // sequence that hasn't been indexed by lastdb
                ^
make: *** [lastal.o] Error 1
